putch user-params
