# api/cmd/main.go
@@ -67,6 +67,7 @@ func main() {
 	r.GET("/users", handler.GetUsers)
 	r.POST("/user-params", middleware.JWTAuth(), handler.CreateUserParams)
 	r.GET("/user-params/:user_id", middleware.JWTAuth(), handler.GetUserParams)
+	r.PATCH("/user-params/:user_id", middleware.JWTAuth(), handler.PatchUserParams)
 
 	log.Println("start at :8080")
 	if err := r.Run(":8080"); err != nil {
